docs/k8s/Ali/yaml/service/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: siglife-cloud
  labels:
    app.kubernetes.io/name: siglife-cloud
    app.kubernetes.io/part-of: siglife-cloud
