docs/k8s/Ali/yaml/service/deployment/connector-mqtt.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: connector-mqtt
  namespace: siglife-cloud
spec:
  selector:
    matchLabels:
      service: connector-mqtt
  replicas: 2
  template:
    metadata:
      labels:
        service: connector-mqtt
    spec:
      imagePullSecrets:
        - name: siglife-docker-registry
      containers:
        - name: connector-mqtt
          image: nexus.sigsmart.com.cn:8001/cloudv3/connector-mqtt:3.0.1-SNAPSHOT
          imagePullPolicy: Always
