docs/k8s/Ali/yaml/service/deployment/connector-joymeter.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: connector-joymeter
  namespace: siglife-cloud
spec:
  selector:
    matchLabels:
      service: connector-joymeter
  replicas: 2
  template:
    metadata:
      labels:
        service: connector-joymeter
    spec:
      imagePullSecrets:
        - name: siglife-docker-registry
      containers:
        - name: connector-joymeter
          image: nexus.sigsmart.com.cn:8001/cloudv3/connector-joymeter:3.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8094
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: service-joymeter
  name: service-joymeter
  namespace: siglife-cloud
spec:
  selector:
    service: connector-joymeter
  ports:
    - name: port-1
      port: 80
      protocol: TCP
      targetPort: 8094
