docs/k8s/Ali/yaml/service/deployment/gateway-command.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: gateway-command
  namespace: siglife-cloud
spec:
  selector:
    matchLabels:
      service: gateway-command
  replicas: 2
  template:
    metadata:
      labels:
        service: gateway-command
    spec:
      imagePullSecrets:
        - name: siglife-docker-registry
      containers:
      - name: gateway-command
        image: nexus.sigsmart.com.cn:8001/cloudv3/gateway-command:3.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8091
        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: gateway-command
  name: gateway-command
  namespace: siglife-cloud
spec:
  selector:
    service: gateway-command
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 8091
