docs/k8s/Ali/yaml/service/deployment/service-alarm.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: service-alarm
  namespace: siglife-cloud
spec:
  selector:
    matchLabels:
      service: service-alarm
  replicas: 2
  template:
    metadata:
      labels:
        service: service-alarm
    spec:
      imagePullSecrets:
        - name: siglife-docker-registry
      containers:
      - name: service-alarm
        image: nexus.sigsmart.com.cn:8001/cloudv3/service-alarm:3.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8089
        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: service-alarm
  name: service-alarm
  namespace: siglife-cloud
spec:
  selector:
    service: service-alarm
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 8089
